syntax = "proto3";

package usersvc;

service UserService {
  rpc Register(RegReq) returns(RegResp) {} // protocol for user registration
}

message CommonResp {
  int32 code = 1;
  string message = 2;
}

message RegReq {
  string phone = 1;
  string password = 2;
  string verification = 3;
}

message RegResp {
  CommonResp common = 1;
  string userid = 2;
}
